# comfy-slack-bot

./: pyproject.toml  run_bot.py
${STATS_DB_PATH:/app/data/: stats.db}
config/: config.yaml
src/: main.py  scheduler.py
src/bot/: handlers.py  queue_processor.py  slack_interface.py  views.py
src/image_generation/: sd_wrapper.py
src/queue/: request_queue.py
src/stats/: database.py  reporter.py  tracker.py
src/utils/: config.py  exceptions.py  file_handling.py  logging_config.py  temp_dir_manager.py
